Upgrade dependencies (#2468)